src/test/resources/compilation_error/undefined_main_error_2.funcky
numbers: "funcky:numbers"

foo = numbers.add 1
